--- a/css-basics/css-basics_pokemon-page/css/styles.css
+++ b/css-basics/css-basics_pokemon-page/css/styles.css
@@ -2,14 +2,23 @@
 
 /* ------- General Styles ------- */
 
-/* Task 1: First of all we want to adjust how the size of our elements is calculated when working with CSS. Do you know how to switch from "content-box" to "border-box"? */
+/* Task 1: First of all we want to adjust how the size of our 
+elements is calculated when working with CSS. 
+Do you know how to switch from "content-box" 
+to "border-box"? */
 
 /* your solution */
+* {
+  box-sizing: border-box;
+}
 
-/* Task 2: Let's work on some basic stylings that we want to apply to all elements of your code via inheritance. Which selector do we need for this? */
+/* Task 2: Let's work on some basic stylings 
+that we want to apply to all elements of your 
+code via inheritance. 
+Which selector do we need for this? */
 
 /* add selector */
- {
+body {
   font-family: monospace;
   font-size: 1rem;
   line-height: 1.5;
@@ -18,11 +27,23 @@
 
 /* ------- Headings Part 1 ------- */
 
-/* Task 3: To set the line height to 1.5 is good for texts, because of accessibility concerns, but for the headings it seems too much. Let's change this by giving our headings a line height of 1.2: */
+/* Task 3: To set the line height to 1.5 is good 
+for texts, because of accessibility concerns, but for 
+the headings it seems too much. Let's change this by 
+giving our headings a line height of 1.2: */
 
 /* your solution */
+body h1,
+body h2 {
+  line-height: 1.2cm;
+}
 
-/* Task 4: Now we want to give our h1 element more styles to shine! Add the following styles by writing the correct declarations inside of the declaration block of the next CSS rule:
+/* Task 4: Now we want to give our h1 
+element more styles to shine! 
+Add the following styles by writing the correct 
+declarations 
+inside of the declaration block of the next CSS 
+rule:
 
 - Change the background color to white
 - Set the top margin to "0"
@@ -32,49 +53,86 @@
 
 .title {
   /* your solution */
+  background-color: white;
+  margin: 0;
+  padding: 10px;
+  text-align: center;
 }
 
 /* ------- Sections ------- */
 
-/* Task 5: Our page consists of two sections that contain information about why Pokémon are cool and what the favorite Pokémon are. Let's style these sections:
+/* Task 5: Our page consists of two sections 
+that contain information about why Pokémon are 
+cool and what the favorite Pokémon are. 
+Let's style these sections:
 
-- We want to have a white background for our sections
+- We want to have a white background for our 
+sections
 - Add a padding of 20px and a margin of 10px
-- A fancy add on: Add a solid 5px border with the color "orange" that is only visible on the left. Hint: Use "border-left". :)
-- Bonus:  The left border of the second section which contains a list of favourite Pokémon should have the color "gold". Hint: You may need a second CSS rule.
+- A fancy add on: Add a solid 5px border with 
+the color "orange" that is only visible on the 
+left. Hint: Use "border-left". :)
+- Bonus:  The left border of the second 
+section which contains a list of favourite 
+Pokémon should have the color "gold". 
+Hint: You may need a second CSS rule.
 */
 
 section {
   /* your solution */
+  background-color: white;
+  padding: 20px;
+  margin: 10px;
+  border-left: solid orange;
 }
 
+.favourites {
+  border-left-color: gold;
+}
 /* ------- Headings Part 2 ------- */
 
-/* Task 6: The headings of our sections somehow look boring. Therefore, we want to change this:
+/* Task 6: The headings of our sections somehow
+look boring. Therefore, we want to change this:
 
-- We want a border to the left and the right of the title only. The border should be 3px solid with the color "gold".)
-- There should be some space between the characters and the border.
-- The right border should end with the last character of the title. Hint: If you don't know how to do this, think about the display property.
-- Bonus: The color of the border of "Favourite Pokémon" should be "orange". Hint: You may need another CSS rule.
+- We want a border to the left and the right of 
+the title only. The border should be 3px solid 
+with the color "gold".)
+- There should be some space between the 
+characters and the border.
+- The right border should end with the last 
+character of the title. 
+Hint: If you don't know how to do this, 
+think about the display property.
+- Bonus: The color of the border of 
+"Favourite Pokémon" should be "orange". 
+Hint: You may need another CSS rule.
 */
 
 .subtitle {
   /* your solution */
+  border-left: solid 3px gold;
+  border-right: solid 3px gold;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: inline-block;
+}
+
+.favourites .subtitle {
+  border-right-color: orange;
 }
 
 /* ------- List ------- */
 
-/* Task 7: Last but not least! We want to style our list with our favorite Pokémon. Which selector do we need? And also add values for the padding. */
+/* Task 7: Last but not least!
+ We want to style our list with our favorite 
+ Pokémon. 
+ Which selector do we need? 
+ And also add values for the padding. */
 
 /* add selector */
- {
+ul {
   list-style: "🧡";
-  padding-left: /* add value */ ;
-}
-
-/* add selector */
- {
-  padding-left: /* add value */ ;
+  padding-left: 20px;
 }
 
 /* ------- The End -------- */
@@ -84,4 +142,7 @@ section {
   height: auto;
 }
 
-/* Note: After finishing all tasks this class should also work. This means that the image should flexibly adjust its size to the width of the viewport. */
+/* Note: After finishing all tasks this #
+class should also work. T
+his means that the image should flexibly 
+adjust its size to the width of the viewport. */
